--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -28,13 +28,28 @@ I customized the horizon theme to adjust some of the syntax colors and backgroun
 (setq doom-theme 'my-doom-horizon)
 #+end_src
 
+Add highlighting to operators
+[[https://stackoverflow.com/questions/5831036/how-to-customize-emacs-in-python-mode-to-highlight-operators]]
+#+begin_src elisp
+(defface font-lock-operator-face
+  '((t (:foreground "#21BFC2"))) "Basic face for operator." :group 'basic-faces)
+;; C-Like
+(dolist (mode-iter '(c-mode c++-mode dart-mode glsl-mode java-mode javascript-mode rust-mode))
+  (font-lock-add-keywords mode-iter
+   '(("\\([~^&\|!<>=,.\\+*/%-;:?]\\)" 0 'font-lock-operator-face keep))))
+;; Scripting
+(dolist (mode-iter '(python-mode lua-mode))
+  (font-lock-add-keywords mode-iter
+   '(("\\([@~^&\|!<>:=,.\\+*/%-]\\)" 0 'font-lock-operator-face keep))))
+#+end_src
+
 ** Nyan-Mode
 Adds the Nyan-cat progress bar on the modeline
 #+begin_src elisp
 (use-package! nyan-mode
   :after doom-modeline
   :init
-  (setq nyan-bar-length 20)
+  (setq nyan-bar-length 40)
    (nyan-mode)
   )
 #+end_src
@@ -102,10 +117,10 @@ They're here if I want them, added a keybind to enable/disable them in the keybi
 ** Linux Specifics
 Adds opacity on Linux, I usually keep this high otherwise text can become hard to read
 #+begin_src elisp
-(when IS-LINUX
-  (set-frame-parameter (selected-frame) 'alpha '(99 . 99))
-  (add-to-list 'default-frame-alist '(alpha . (99 . 99)))
-  (add-to-list 'default-frame-alist '(inhibit-double-buffering . t)))
+;; (when IS-LINUX
+;;   (set-frame-parameter (selected-frame) 'alpha '(99 . 99))
+;;   (add-to-list 'default-frame-alist '(alpha . (99 . 99)))
+;;   (add-to-list 'default-frame-alist '(inhibit-double-buffering . t)))
 #+end_src
 
 ** Make undo better
@@ -140,14 +155,14 @@ The popup notification is working, but I think it may be incompatible with Doom 
 #+begin_src elisp
 ;; (use-package! evil-motion-trainer
 ;;   :init
-;;   (global-evil-motion-trainer-mode 1)
-;;   :config
-;;   (setq evil-motion-trainer-threshold 3))
+;;   (global-evil-motion-trainer-mode 1))
+;;   ;; :config
+;;   ;; (setq evil-motion-trainer-threshold 3))
 ;; ;; (setq evil-motion-trainer-super-annoying-mode t)
 ;; (map!
 ;;  :leader
 ;;  (:prefix-map ("t" . "toggle")
-  ;; :desc "Evil motion trainer" "t" #'evil-motion-trainer-mode))
+;;   :desc "Evil motion trainer" "t" #'evil-motion-trainer-mode))
 #+end_src
 
 ** Evil-Snipe
@@ -171,6 +186,17 @@ Add default project directory for projectile
 (setq projectile-project-search-path '("~/dev/src/"))
 #+end_src
 
+Prompt to create new test file when not found
+#+begin_src elisp
+(setq projectile-create-missing-test-files t)
+#+end_src
+
+** Sublimity
+#+begin_src elisp
+;; (require 'sublimity-attractive)
+;; (sublimity-mode 1)
+;; (setq sublimity-attractive-centering-width 170)
+#+end_src
 ** Treemacs
 Default doom theme is minimal and doesn't use file type icons, I much prefer this one
 #+begin_src elisp
@@ -193,7 +219,7 @@ Add bands to quickly access my dotfiles within Emacs
         (:prefix ("f ." . "open dotfile")
          :desc "Edit doom config.org" "d" #'(lambda () (interactive) (find-file "~/.config/doom/config.org"))
          :desc "Open qtile README.org" "q" #'(lambda () (interactive) (find-file "~/.config/qtile/README.org"))
-         :desc "Edit alacritty alacritty.yml" "a" #'(lambda () (interactive) (find-file "~/.config/alacritty/alacritty.yml"))
+         :desc "Edit alacritty.yml" "a" #'(lambda () (interactive) (find-file "~/.config/alacritty/alacritty.yml"))
          :desc "Open fish README.org" "f" #'(lambda () (interactive) (find-file "~/.config/fish/README.org"))
          ))
 #+end_src
@@ -264,7 +290,7 @@ Adding some utility binds for snippets
 * Lang Specific Configs
 ** Flutter
 *** Flutter setup with major mode keybinds
-Setting up  Doom to be a Flutter IDE
+Setting up Doom to be a Flutter IDE
 #+begin_src elisp
 (use-package lsp-dart
   :init
